--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+* {
+  font-family: Open Sans;
+}
+
 .c1 {
   box-sizing: border-box;
   display: inline-block;
@@ -58,4 +62,43 @@
   position: relative;
   font-family: "Font Awesome 5 Duotone";
   font-weight: 900;
+}
+
+.feature-offer-blur {
+  color: white;
+  position: absolute;
+  background: radial-gradient(
+    92.92% 265.14% at 2.04% 32.27%,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0.3) 100%
+  );
+  -webkit-backdrop-filter: blur(50px);
+  backdrop-filter: blur(50px);
+  bottom: 0;
+  width: 100%;
+  border-radius: 0 0 8px 8px;
+  min-height: 180px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border: 2px solid #555555;
+}
+.gradient-gray-left {
+  background-color: linear-gradient(
+    45deg,
+    rgba(0, 0, 0, 0.75) 36.38%,
+    rgba(0, 0, 0, 0) 92.41%
+  );
 }
