--- a/src/index.css
+++ b/src/index.css
@@ -102,3 +102,7 @@
     rgba(0, 0, 0, 0) 92.41%
   );
 }
+.StripeCheckout span {
+  background-color: #000 !important;
+  background-image: none !important;
+}
